fixed margins to align with other pages

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -65,7 +65,6 @@ body .topNav{
     color:white;
 }
 .content{
-    margin-top: 3%;;
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -84,7 +83,8 @@ body .topNav{
     text-align: center;
     width: 100%;
     height: 15rem;
-    margin: 0.5rem;
+    margin-right: 0.75rem;
+    margin-bottom: 0.75rem;
     background-color: #4F4F4F;
     background-size: 100% 100%;
     background-position: center;
